<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/numGuestsBookingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/label_num_guests_booking"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/dwellingLabel"
        app:layout_constraintEnd_toEndOf="@+id/numFloorsLabel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/numFloorsLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/numGuestsBookingText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/value_num_guests_booking"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/numGuestsBookingLabel"
        app:layout_constraintEnd_toEndOf="@+id/numFloorsText"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toStartOf="@+id/numFloorsText"
        app:layout_constraintTop_toTopOf="@+id/numGuestsBookingLabel"
        tools:text="2" />

    <TextView
        android:id="@+id/dwellingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/label_dwelling"
        android:textColor="@android:color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/dwellingImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.69"
        tools:text="Square Cabin" />

    <ImageView
        android:id="@+id/dwellingImage"
        android:layout_width="207dp"
        android:layout_height="236dp"
        android:contentDescription="@string/content_description_dwelling_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.314"
        app:srcCompat="@android:drawable/btn_dialog" />

    <Button
        android:id="@+id/nextDwellingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/button_next_dwelling_arrow"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/dwellingImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/dwellingImage"
        app:layout_constraintTop_toTopOf="@+id/dwellingImage"
        app:layout_constraintVertical_bias="0.497" />

    <Button
        android:id="@+id/previousDwellingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/button_previous_dwelling_arrow"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/dwellingImage"
        app:layout_constraintEnd_toStartOf="@+id/dwellingImage"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dwellingImage" />

    <TextView
        android:id="@+id/numFloorsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/label_number_of_floors"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dwellingImage"
        app:layout_constraintVertical_bias="0.16000003" />

    <TextView
        android:id="@+id/numFloorsText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:fontFamily="sans-serif"
        android:text="@string/value_num_floors"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/numFloorsLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toEndOf="@+id/numFloorsLabel"
        app:layout_constraintTop_toTopOf="@+id/numFloorsLabel"
        tools:text="2" />

    <TextView
        android:id="@+id/floorAreaLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/label_floor_area"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/numFloorsLabel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/numFloorsLabel"
        app:layout_constraintTop_toBottomOf="@+id/numFloorsLabel"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/floorAreaText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/value_floor_area"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/floorAreaLabel"
        app:layout_constraintEnd_toEndOf="@+id/numFloorsText"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toStartOf="@+id/numFloorsText"
        app:layout_constraintTop_toTopOf="@+id/floorAreaLabel"
        tools:text="2" />

    <TextView
        android:id="@+id/capacityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/label_capacity"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/floorAreaLabel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/floorAreaLabel"
        app:layout_constraintTop_toBottomOf="@+id/floorAreaLabel"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/capacityText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/value_capacity"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/capacityLabel"
        app:layout_constraintEnd_toEndOf="@+id/numFloorsText"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toStartOf="@+id/floorAreaText"
        app:layout_constraintTop_toTopOf="@+id/capacityLabel"
        tools:text="2" />

    <TextView
        android:id="@+id/numResidentsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/label_number_of_people"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/capacityLabel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/capacityLabel"
        app:layout_constraintTop_toBottomOf="@+id/capacityLabel"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/numResidentsText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/value_num_residents"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/numResidentsLabel"
        app:layout_constraintEnd_toEndOf="@+id/numFloorsText"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/numFloorsText"
        app:layout_constraintTop_toTopOf="@+id/numResidentsLabel"
        app:layout_constraintVertical_bias="0.0"
        tools:text="2" />

    <TextView
        android:id="@+id/buildingMaterialLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/label_building_material"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/numResidentsLabel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/numResidentsLabel"
        app:layout_constraintTop_toBottomOf="@+id/numResidentsLabel"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/buildingMaterialText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/value_building_material"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/buildingMaterialLabel"
        app:layout_constraintEnd_toEndOf="@+id/numFloorsText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/capacityText"
        app:layout_constraintTop_toTopOf="@+id/buildingMaterialLabel"
        app:layout_constraintVertical_bias="1.0"
        tools:text="wood" />

    <Button
        android:id="@+id/selectDwellingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_select_dwelling"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buildingMaterialLabel"
        app:layout_constraintVertical_bias="0.16000003" />

    <TextView
        android:id="@+id/hasRoomTextArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/has_room_text"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectDwellingButton"
        app:layout_constraintVertical_bias="0.100000024"
        tools:text="has room left" />

</androidx.constraintlayout.widget.ConstraintLayout>